# 002_ESP32-S3_RC_of_UAV

./: CMakeLists.txt  README.md
components/lvgl_esp32_drivers/: CMakeLists.txt
components/lvgl_esp32_drivers/lvgl_port/: lvgl_port.c
components/lvgl_esp32_drivers/lvgl_port/include/: lvgl_port.h
components/lvgl_esp32_drivers/lvgl_spi/: disp_spi.c
components/lvgl_esp32_drivers/lvgl_spi/include/: disp_spi.h
components/lvgl_esp32_drivers/lvgl_tft/: disp_spi.c  ili9341.c
components/lvgl_esp32_drivers/lvgl_tft/include/: disp_spi.h  ili9341.h
components/lvgl_esp32_drivers/lvgl_touch/: touch_spi.c  xpt2046.c
components/lvgl_esp32_drivers/lvgl_touch/include/: touch_spi.h  xpt2046.h
main/: main.c
